# gnuplotter

./: .gitignore  Cargo.toml  README.md  resources.md
.github/workflows/: build_and_test.yml  deploy.yml
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
gnuplotter/: Cargo.toml
gnuplotter/examples/: demo_basic.rs  simple_2D_plot.rs
gnuplotter/src/: lib.rs  plot.rs
gnuplotter_core/: Cargo.toml  README.md  series_data.txt
gnuplotter_core/src/: gnu.rs  lib.rs  maybe.rs  required.rs
gnuplotter_core/src/gnu/: command.rs  data.rs  dimension.rs  render.rs
gnuplotter_core/src/gnu/command/: axis.rs  config.rs  title.rs  x_label.rs  y_label.rs
gnuplotter_core/src/gnu/command/axis/: label.rs
gnuplotter_core/src/gnu/command/config/: filename.rs  terminal.rs
gnuplotter_core/src/gnu/data/: serie.rs  series.rs  source.rs
gnuplotter_core/src/gnu/data/source/: vector_data_source.rs
gnuplotter_macros/: Cargo.toml  README.md
gnuplotter_macros/src/: axis.rs  implement.rs  lib.rs  plot.rs
gnuplotter_macros/src/implement/: getters.rs  gnu_command_factory.rs
gnuplotter_tests/: Cargo.toml  series_data.txt
gnuplotter_tests/src/: lib.rs  plot_2d.rs
src/: lib.rs  plot.rs
tests/: gnuplotter.rs
