[package]
name = "gnuplotter"
description = "A simple utility repo to use the gnuplot library in rust"
version = "0.1.6-alpha"
edition = "2021"
license-file = "../.github/LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplotter_core = { path = "../gnuplotter_core" }
gnuplotter_macros = { path = "../gnuplotter_macros" }