[package]
name = "gnuplotter_core"
description = "Dependency for gnuplotter"
version = "0.2.3-alpha"
edition = "2021"
license-file = "../.github/LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
rand = "0.8.5"
