[package]
name = "gnuplotter_macros"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
gnuplotter_core = { path = "../gnuplotter_core" }
derive_builder = "0.12.0"
quote = "1.0.35"
syn = "2.0.48"
tempfile = "3.9.0"
