[package]
name = "gnuplotter_macros"
description = "Dependency for gnuplotter providing it with procedural macro utilities"
version = "0.1.7-alpha"
edition = "2021"
license-file = "../.github/LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
gnuplotter_core = { path = "../gnuplotter_core", version= "0.1.7-alpha" }
derive_builder = "0.12.0"
quote = "1.0.35"
syn = "2.0.48"
tempfile = "3.9.0"
