[package]
name = "gnuplotter_macros"
description = "Dependency for gnuplotter providing it with procedural macro utilities"
version = "0.2.2-alpha"
edition = "2021"
license-file = "../.github/LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
gnuplotter_core = { path = "../gnuplotter_core", version= "0.2.2-alpha" }
derive_builder = "0.12.0"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["derive", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro", "full"] }
tempfile = "3.9.0"
proc-macro2 = "1.0.76"
png = "0.17.11"
term = "0.7.0"
